_______________________________________________________________________________
2012-10-21 HTTP-Message 6.06

Gisle Aas (2):
      More forgiving test on croak message [RT#80302]
      Added test for multipart parsing

Mark Overmeer (1):
      Multipart end boundary doesn't need match a complete line [RT#79239]



_______________________________________________________________________________
2012-10-20 HTTP-Message 6.05

Gisle Aas (5):
      Updated ignores
      No need to prevent visiting field values starting with '_'
      Report the correct croak caller for delegated methods
      Disallow empty field names or field names containing ':'
      Make the extra std_case entries local to each header



_______________________________________________________________________________
2012-09-30 HTTP-Message 6.04

Gisle Aas (5):
      Updated repository URL
      Avoid undef warning for empty content
      Teach $m->content_charset about JSON
      Use the canonical charset name for UTF-16LE (and frieds)
      Add option to override the "(no content)" marker of $m->dump

Christopher J. Madsen (2):
      Use IO::HTML for <meta> encoding sniffing
      mime_name was introduced in Encode 2.21

Tom Hukins (1):
      Remove an unneeded "require"

Ville Skyttä (1):
      Spelling fixes.

chromatic (1):
      Sanitized PERL_HTTP_URI_CLASS environment variable.

Martin H. Sluka (1):
      Add test from RT#77466

Father Chrysostomos (1):
      Fix doc grammo [RT#75831]



_______________________________________________________________________________
2012-02-16 HTTP-Message 6.03

Support 'bzip2' as alternative to Content-Encoding: x-bzip2.  Some
servers seem to return it.

Make newlines in forms be "\r\n" terminated.

Added some more status codes.

Restore perl-5.8.1 compatibility.



_______________________________________________________________________________
2011-03-20 HTTP-Message 6.02

Declare dependency on Bunzip2 v2.021 [RT#66593]


